@@ -5,15 +5,20 @@ all:
 	@echo "make solaris"
 	@echo "make mac"
 
-linux: zucca.c ssh_scan.c ../singsing.c ../singsing.h ../singsing_p.h
+linux: zucca.c filippo.c ssh_scan.c ../singsing.c ../singsing.h ../singsing_p.h
 	gcc -o zucca zucca.c ../singsing.c -I../ -lpcap -lpthread -Wall
 	gcc -o ssh_scan ssh_scan.c ../singsing.c -I../ -lpcap -lpthread -Wall
+	gcc -o filippo filippo.c ../singsing.c -I../ -lpcap -lpthread -Wall
 
-solaris: zucca.c ssh_scan.c ../singsing.c ../singsing.h ../singsing_p.h
+solaris: zucca.c filippo.c ssh_scan.c ../singsing.c ../singsing.h ../singsing_p.h
 	gcc -o zucca zucca.c ../singsing.c -I../ -DSOLARIS -lpcap -lpthread -lxnet -lsocket -Wall
 	gcc -o ssh_scan ssh_scan.c ../singsing.c -I../ -DSOLARIS -lpcap -lpthread -lxnet -lsocket -Wall
+	gcc -o filippo filippo.c ../singsing.c -I../ -DSOLARIS -lpcap -lpthread -lxnet -lsocket -Wall
 
-mac: zucca.c ssh_scan.c ../singsing.c ../singsing.h ../singsing_p.h
+
+mac: zucca.c filippo.c ssh_scan.c ../singsing.c ../singsing.h ../singsing_p.h
 	gcc -o zucca zucca.c ../singsing.c -I../ -DMAC -lpcap -lpthread -Wall
 	gcc -o ssh_scan ssh_scan.c ../singsing.c -I../ -DMAC -lpcap -lpthread -Wall
+	gcc -o filippo filippo.c ../singsing.c -I../ -DMAC -lpcap -lpthread -Wall
+
 
